# smtc-now-playing

./: .editorconfig  .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.bat  go.mod  go.sum  main.go  smtc.go  smtc_testmain.go  systray.go  ui.go  version.go
.github/workflows/: ci.yml  release.yml
.sisyphus/evidence/: task-14-docs-clean.txt  task-8-com-goroutine.txt  task-8-smtc-compile.txt  task-9-no-polling.txt  task-9-server-compile.txt  task-9-ws-format.txt
c/: CMakeLists.txt  smtc.cpp  smtc.h  smtc_c.h
c/cmake/: CustomCompilerOptions.cmake  GenerateVersionInfo.cmake  GlobalOptions.cmake
cmake/: ProjectMacros.cmake
cmd/smtc-now-playing/: main.go
cmd/smtc-test/: main.go
docs/: build.md  development.md
installer/: setup.iss
internal/config/: appdata_test.go  config.go  config_test.go  migrate_test.go  save_test.go
internal/domain/: domain.go  domain_test.go
internal/gui/: gui.go  systray.go
internal/server/: api.go  api_test.go  constants.go  hub.go  middleware.go  security_test.go  server.go  server_test.go
internal/smtc/: constants.go  control.go  control_test.go  event_test.go  helpers.go  helpers_test.go  media.go  mock_provider.go  playback.go  provider.go  session.go  smtc.go  smtc_test.go  thumbnail.go  types.go  types_test.go
internal/updater/: updater.go  updater_test.go
internal/version/: version.go  version_test.go
internal/webview/: webview.go
internal/wsproto/: wsproto.go  wsproto_test.go
script/: functions.js
smtc-monitor/: CMakeLists.txt  main.cpp  resource.rc  rsrc_windows_amd64.syso  smtc.cpp  smtc.h  smtc_c.cpp  smtc_c.def  smtc_c.h
smtc-monitor/winres/: winres.json
smtc-now-playing/: config.go  go.mod  go.sum  main.go  monitor.go  processexitgroup.go  rsrc_windows_amd64.syso  smtc.go  smtc_main.go  smtc_testmain.go  systray.go  ui.go  webserver.go
smtc-now-playing/winres/: winres.json
smtc_c/: CMakeLists.txt  smtc.cpp  smtc_c.cpp
static/: index.html  script.js  styles.css
themes/default/: index.html  styles.css
themes/mini/: index.html  styles.css
themes/minimal/: index.html
themes/modern/: index.html
themes/new-horizontal/: index.html
themes/new-vertical/: index.html
themes/stream-bar/: index.html
